# MV-EQA

./: .gitignore  LICENSE  README.md  common.py  inference.py  pyproject.toml  realtime_expriment.py  requirements.txt  shake_evaluate.py  train.py  visualize.py
agent/: __init__.py  agents.py  base_agent.py
dataset/: __init__.py  base_dataset.py
demos/1_jump/input_npy_files/: learner.npy  teacher.npy
demos/2_highknee/input_npy_files/: learner.npy  teacher.npy
demos/Jitter_Comparison_demos/Pupmkinhulk/AirSquat/: AirSquat.npy
demos/Jitter_Comparison_demos/Pupmkinhulk/AirSquat/jointsDict/: 0000_keypoints.json  (+56 more)
demos/Jitter_Comparison_demos/Pupmkinhulk/BicepCurl/: BicepCurl.npy
demos/Jitter_Comparison_demos/Pupmkinhulk/JumpingJacks/: JumpingJacks.npy
demos/Jitter_Comparison_demos/Pupmkinhulk/WarmingUp/: WarmingUp.npy
demos/Jitter_Comparison_demos/Remy/AirSquat/: AirSquat.npy
demos/Jitter_Comparison_demos/Remy/BicepCurl/: BicepCurl.npy
demos/Jitter_Comparison_demos/Remy/JumpingJacks/: JumpingJacks.npy
demos/Jitter_Comparison_demos/Remy/WarmingUp/: WarmingUp.npy
demos/Jitter_Comparison_demos/Ty/AirSquat/: AirSquat.npy
demos/Jitter_Comparison_demos/Ty/BicepCurl/: BicepCurl.npy
demos/Jitter_Comparison_demos/Ty/JumpingJacks/: JumpingJacks.npy
demos/Jitter_Comparison_demos/Ty/WarmingUp/: WarmingUp.npy
examples/: sample_predictions.jsonl  sample_references.jsonl
functional/: motion.py  utils.py  visualization.py
model/: __init__.py  networks.py
src/mveqa/: __init__.py  cli.py  dataset.py  metrics.py
tests/: test_dataset.py  test_metrics.py
(+1314 files in other folders)
